--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,20 @@
+<script type="text/javascript">
+	function showBookmarklet() {
+		var pw = document.getElementById('textpw').value ;
+		var previewText = "javascript:(function(){var s=document.createElement(&quot;script&quot;);s.charset=&quot;UTF-8&quot;;s.language=&quot;javascript&quot;;s.type=&quot;text/javascript&quot;;var d=new Date;s.src=&quot;" + "<%= @baseurl %>" + "/core.js?pw="+ pw +"&quot;;document.body.appendChild(s)})();"
+		document.getElementById('bookmarkletPreview').innerText = previewText ;
+	}
+</script>
+
+<h1>password</h1>
+<input type="text" id="textpw" size="30" onkeyup="showBookmarklet()"></input>
+
 <h1>bookmarklet</h1>
 
 <div>
-<pre>
-javascript:(function(){var s=document.createElement(&quot;script&quot;);s.charset=&quot;UTF-8&quot;;s.language=&quot;javascript&quot;;s.type=&quot;text/javascript&quot;;var d=new Date;s.src=&quot;https://atodeyomo.herokuapp.com/js/core.js&quot;;document.body.appendChild(s)})();
-</pre>
+<textarea id="bookmarkletPreview" rows="4" cols="100">
+(ここに表示されます)
+</textarea>
 </div>
 
 
